--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lib": "."
   },
   "dependencies": {
-    "socket.io":"0.6.12"
+    "socket.io":">=0.6.12"
   },
   "engines": {
     "node":  ">=0.4.0"
