--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lib": "."
   },
   "dependencies": {
-    "socket.io":"0.6.12"
+    "socket.io":"0.6.17"
+  },
+  "devDependencies": {
+    "connect": "1.4.3"
   },
   "engines": {
     "node":  ">=0.4.0"
